--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
             android:exported="true"/>
         <activity android:name=".CameraActivity"
                     android:exported="true"/>
-
+        <activity android:name=".ResultActivity"
+            android:exported="true"/>
     </application>
 
 </manifest>
