--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,7 @@ dependencies {
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
 
+    implementation 'com.github.yukuku:ambilwarna:2.0.1'
+
 
 }
