--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
             android:exported="true"/>
         <activity android:name=".MemoryActivity"
             android:exported="true"/>
+        <activity android:name=".SettingsActivity"
+            android:exported="true"/>
 
     </application>
 
